# UBB-INFO

./: .gitignore  README.md
An 1/Algoritmica Grafurilor/2024-2025/: Seminar1.txt
An 1/Arhitectura Sistemelor de Calcul/Seminare ASC/: Seminar 3 ASC.docx  Seminar 4.docx  Seminar 5.docx  Seminar 6.docx  Seminar 7.docx
An 1/Fundamentele Programarii/Tema Lab4-6 dictionar+meniu/: Documentatie.docx  main.py
An 1/Fundamentele Programarii/labu7-9culistarepositoybun/: Documentatie 7-9.docx  main.py
An 1/Programare Orientata Obiect/SUBIECTE SIMULARE/: doctori.docx
An 1/Sisteme Dinamice/: lab1.mw  meipal1.mw
An 1/Sisteme Dinamice/LAB MAPLE 2/: meipal.rar
An 1/Sisteme Dinamice/LAB MAPLE 3/: lab01.mw  lab3.mw  lab5.mw
An 1/Sisteme Dinamice/LABORATOARE MAPLE/: Lab1.mw  Lab2.mw  Lab3.mw  Problema1.mw  Problema3.mw
An 1/Sisteme de Operare/: Sisteme de operare.rtf.doc
An 1/Sisteme de Operare/TEORIE/: SO-NOTITE-EXAMEN.docx
An 1/Structuri de Date si Algoritmi/SDA - Teams/: ___All_Errors.txt
An 1/Structuri de Date si Algoritmi/SDA/2022-2023/TAD-Arbore-binar-main/: AB.cpp  CMakeLists.txt  IteratorAB.cpp  TestExtins.cpp
An 1/Structuri de Date si Algoritmi/SDA/2022-2023/colectie_ce_poate_ca_merge/: CMakeLists.txt
An 1/Structuri de Date si Algoritmi/SDA/2022-2023/colectie_cu_main - Copy/: CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  main.cpp
An 1/Structuri de Date si Algoritmi/SDA/2022-2023/cu_relatie_multime/: CMakeLists.txt
An 1/Structuri de Date si Algoritmi/SDA/2022-2023/inca_o_colectie/: CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.h
An 1/Structuri de Date si Algoritmi/SDA/2022-2023/incaunaptcmake/: CMakeLists.txt  IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  TestExtins.cpp
An 1/Structuri de Date si Algoritmi/SDA/2022-2023/ince_o_multime_cu_relatie/: CMakeLists.txt  Multime.h  TestExtins.cpp
An 1/Structuri de Date si Algoritmi/SDA/2024-2025/Lab1/: CMakeLists.txt  IteratorVectorDinamic.cpp  IteratorVectorDinamic.h  TestExtins.cpp  TestScurt.cpp  TestScurt.h  VectorDinamic.cpp  VectorDinamic.h  main.cpp
An 1/Structuri de Date si Algoritmi/SDA/2024-2025/Lab7/: AB.cpp  AB.h  App.cpp  CMakeLists.txt  IteratorAB.cpp  IteratorAB.h  TestScurt.cpp  TestScurt.h
An 1/Structuri de Date si Algoritmi/SDA/L6/: CMakeLists.txt  TestExtins.cpp
An 1/Structuri de Date si Algoritmi/SDA/lab4SDA/: CMakeLists.txt  Iterator.h  LO.cpp  TestExtins.cpp  TestExtins.h  TestScurt.cpp  TestScurt.h  main.cpp
An 1/Structuri de Date si Algoritmi/SDA/o_lista/: CMakeLists.txt  LO.h
An 1/Structuri de Date si Algoritmi/SDA/stefan/: CMakeLists.txt
An 1/Structuri de Date si Algoritmi/SDA/stefan/Lab1/: Colectie.h  IteratorColectie.cpp  Lab1.vcxproj  TesteleMele.h
An 1/Structuri de Date si Algoritmi/SDA/stefan/Lab1/x64/Debug/: Lab1.ilk  vc143.idb
An 1/Structuri de Date si Algoritmi/SDA/stefan/Lab1/x64/Debug/Lab1.tlog/: CL.command.1.tlog  link.command.1.tlog  link.write.1.tlog
An 1/Structuri de Date si Algoritmi/SDA/stefan/TAD Colectie/Proiect C++/Colectie/: IteratorColectie.cpp
An 2/Baze de Date/: 1.sql  1iar.sql  Indexes.sql  SQLQuery1.sql  examenmap.sql  queryMarketingPublisher.sql  testes.sql
An 2/Baze de Date/Seminarii/: sem2.docx
An 2/Ingineria Sistemelor Soft/: UI.rar  UML-Diagram.mdj  UseCaseDiagram.mdj  UseCases.docx  diagrama.mdj  diagramafinal.rar  diagrame.rar  lab1-3.rar
An 2/Ingineria Sistemelor Soft/Seminar6/: Seminar6p2.docx
An 2/Ingineria Sistemelor Soft/iss1/: build.gradle  db.config  issDB  settings.gradle
An 2/Ingineria Sistemelor Soft/iss1nou/: build.gradle  settings.gradle
An 2/Inteligenta Artificiala/aivechi/: chei azure.txt
An 2/Inteligenta Artificiala/lab10/: GoogleNews-vectors-negative300.txt  lab10.py  numpymoment.py
An 2/Inteligenta Artificiala/lab8/: lab9.py  music_lyrics.txt
An 2/Medii de Proiectare si Programare/AplicatieCharity/: build.gradle  settings.gradle
An 2/Medii de Proiectare si Programare/EXAMEN/: HELPERS.txt  MPP-intrebari.docx  MPP_intrebari.docx  cauta_obiecte.rar  consoane_vocale.rar  cursuri_mpp.docx  cursuri_mpp_2.docx  ghiceste_model.rar  joc_gropi.rar
An 2/Medii de Proiectare si Programare/JavaClientServerSecond/: settings.gradle.kts
An 2/Medii de Proiectare si Programare/KidsCompetitions/: KidsComp.db  build.gradle  db.config  settings.gradle
An 2/Medii de Proiectare si Programare/SERVER_CLIENT_MPP/: build.gradle  settings.gradle
An 2/Medii de Proiectare si Programare/frameworkTest/: frameworkTest.sln
An 2/Medii de Proiectare si Programare/javaClientServer/: settings.gradle
An 2/Medii de Proiectare si Programare/oacoacdiridiridac/: build.gradle  db.config  identifier.sqlite  settings.gradle
An 2/Medii de Proiectare si Programare/problema11final/: build.gradle  identifier.sqlite  settings.gradle
An 2/Metode Avansate de Programare/: socialnetwork.sql
An 2/Metode Avansate de Programare/lab3Documentatie31.10/: Main.html  Tests.html  help-doc.html  (+11 more)
An 2/Programare Logica si Functionala/: Model matematic P1.docx  lab1.pl  lab1.pl~  labp2.pl  labp2.pl~  p3.pl  p3.pl~
An 2/Programare Web/: LAB4.rar  LAB6.rar
An 2/Retele de Calculatoare/: 225-1-subnet.pkt  curs5.docx  proiect.pkt  proiectul.pkt
An 2/Sisteme de Gestiunea Bazelor de Date/: Seminar 5 SGBD.docx
An 3/DPPD/: CeobanuC_ManagClasei suport curs (1).docx  Ghid pentru portofoliu Pract2_Nivel_I.docx  Seminar2.docx  manageditat.docx  manageditat_cleaned.txt  seminar1.docx
An 3/Invatare Interactiva/: Lab1.docx  Lab2.docx  Lab3.docx  Lab4.docx
An 3/Limbaje Formale si Tehnici de Compilare/: lab1.txt
An 3/Programare Paralela si Distributiva/P2Tema/: CMakeLists.txt  Documentatie.docx  Proiect CUDA.7z  date.txt  expected100x100.txt  howtocompile.txt  main.cu  outC.csv  output.txt  script.ps1
An 3/Programare pentru Dispozitive Mobile/: package-lock.json
An 3/Proiect de Cercetare/: lab1.docx  lab2.docx  lab3.docx  lab4.docx
An 3/Realitate Virtuala/: summary.txt
An 3/Verificarea si Validarea Sistemelor Soft/: Testarea - metoda Cutiei negre (black box)  WBT Quiz 2025.txt  lab1.txt  parsed_exam_content.txt
(+2248 files in other folders)
