cmake_minimum_required(VERSION 3.25)
project(incaunaptcmake)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(incaunaptcmake
        IteratorMultime.cpp
        IteratorMultime.h
        main.cpp
        Multime.cpp
        Multime.h
        myTestuletz.cpp
        myTestuletz.h
        TestExtins.cpp
        TestExtins.h
        TestScurt.cpp
        TestScurt.h)
