cmake_minimum_required(VERSION 3.30)
project(Lab1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab1 main.cpp
        IteratorVectorDinamic.h
        IteratorVectorDinamic.cpp
        TestExtins.h
        TestExtins.cpp
        TestScurt.h
        TestScurt.cpp
        VectorDinamic.h
        VectorDinamic.cpp
)
