cmake_minimum_required(VERSION 3.31)
project(Lab7)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab7 App.cpp
                    AB.cpp
                    AB.h
                    IteratorAB.cpp
                    IteratorAB.h
                    TestExtins.cpp
                    TestExtins.h
                    TestScurt.cpp
                    TestScurt.h

)
